<resources>
    <string name="app_name">BCNet_app</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must contain more than 4 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tens_compte"> Already have an account? </string>
    <string name="login">Login</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="oldpassword">Last Password</string>

    <string name="sign_up">Sign up</string>
    <string name="no_tens_compte">Dont have an account?</string>
    <string name="_5_estrelles">5 stars</string>

    <string name="error_field_required"> Required field</string>
    <string name="error_invalid_password">Wrong password</string>
    <string name="error_invalid_user">Wrong user</string>
    <string name="error_user_already_exists">User already exists</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">e-mail</string>
    <string name="new_email">New e-mail</string>
    <string name="rep_password">Repeat password</string>
    <string name="createAccount">Create Account</string>
    <string name="unmatched_passwords">Passwords must match</string>
    <string name="error_invalid_email">Non-valid e-mail</string>
    <string name="createLocal">Create new place suggestion</string>
    <string name="local_name">Place name</string>
    <string name="local_descripció">Place description</string>
    <string name="local_link">Web link</string>
    <string name="local_img">Local image link</string>
    <string name="error_ja_te_comment">Already commented this place</string>
    <string name="error_existeix_local">Already exists a place with this name</string>
    <string name="title_activity_form_new_pswd">FormNewPswd</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="Cerca_per">Search by...</string>
    <string name="Cerca">Search</string>
    <string name="Valora">Rate</string>
    <string name="LogOut">Log Out</string>
    <string name="Perfil">My account</string>
    <string name="Share">Share</string>
    <string name="ShareLocalitzacio">Share a Local</string>
    <string name="DadesPersonals">Personal data</string>
    <string name="ModificarEmail">Change e-mail</string>
    <string name="Modificar">Modify</string>
    <string name="ModificarContrassenya">Modify password</string>
    <string name="Comenta">Add comment</string>
    <string name="Comentari">Comments</string>
    <string name="Mapa">Map</string>
    <string name="Create_account">Create an account</string>
    <string name="ModificarProfilePicture">Modify profile picture</string>
    <string name="InstruccionsCanviProfilePicture">Introduce your password and a new url for your new profile picture </string>
    <string name="new_profilepictureurl">New Url Picture</string>
    <string name="Horari">Timetable</string>
    <string name="titoldescripcio">Description</string>
    <string name="instruccions_comment_covid">Mark what security measures are in place:</string>
    <string name="Gel_Hidroalcohòlic">Hydroalcoholic gel</string>
    <string name="distancia_social">Social Distance</string>
    <string name="termometre">Thermometer</string>
    <string name="mascareta">Mask</string>
    <string name="Comentaopcional">Add comment (optional)</string>
    <string name="tancat">CLOSE</string>
    <string name="obert">OPEN</string>


</resources>