<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormNewEmail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/Modificar_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/ModificarEmail"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/float_label_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/float_label_new_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <EditText
                android:id="@+id/new_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_email"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/BtnModifyEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:text="@string/Modificar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>