<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormNewProfilePictureActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/Modificar_ProfilePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/ModificarProfilePicture"/> />


            <ImageView
                android:id="@+id/imatge_perfil"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginStart="96dp"
                android:layout_marginLeft="96dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="96dp"
                android:layout_marginRight="96dp"
                android:layout_weight="70"
                android:contentDescription="TODO"
                android:scaleType="center"
                android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/Instruccions_newProfile_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/InstruccionsCanviProfilePicture"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:layout_editor_absoluteX="176dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/float_label_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="32dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/float_label_new_Profile_picture_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/float_label_password">

            <EditText
                android:id="@+id/new_Profile_picture_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_profilepictureurl"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/BtnModifyProfilePicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:text="@string/Modificar" />
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
