<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:fillViewport="false">
        <LinearLayout
            android:id="@+id/new_local_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/float_label_local_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/local_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/local_name"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/float_label_descripcio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_marginTop="20dp"
                    android:id="@+id/descripcio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/local_descripció"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/float_label_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_marginTop="20dp"
                    android:id="@+id/link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/local_link"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:layout_marginTop="20dp"
                android:id="@+id/categoria_spinner"
                android:layout_width="300dp"
                android:layout_height="wrap_content" />

            <fragment
                android:layout_marginTop="20dp"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="fill_parent"
                android:layout_height="500dp"
                android:clickable="true"
                />

            <Button
                android:id="@+id/CreateLocalBtn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:text="@string/createLocal" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>